--- a/frontend/src/app/libs/common-components/shared/variables.scss
+++ b/frontend/src/app/libs/common-components/shared/variables.scss
@@ -33,6 +33,7 @@ $color-black-95: rgba($color-black, .95);
 $color-black-90: rgba($color-black, .90);
 $color-black-85: rgba($color-black, .85);
 $color-black-75: rgba($color-black, .75);
+$color-black-70: rgba($color-black, .70);
 $color-black-60: rgba($color-black, .60);
 $color-black-50: rgba($color-black, .50);
 $color-black-30: rgba($color-black, .30);
