--- a/frontend/src/app/libs/breadcrumb/breadcrumb.component.html
+++ b/frontend/src/app/libs/breadcrumb/breadcrumb.component.html
@@ -1,13 +1,17 @@
 <div class="breadcrumb">
-	<ng-container *ngFor="let breadcrumb of breadcrumbs; let isFirst = first;">
-		<span class="breadcrumb__link"
-			  [routerLink]="breadcrumb.url">
-			{{ breadcrumb.label }}
-		</span>
-		<img class="breadcrumb__img"
-			 *ngIf="isFirst"
-			 src="assets/images/icons/icon-chevron-right.svg"
-			 alt="icons">
-	</ng-container>
-<!-- 	<ng-content></ng-content> -->
+	<div class="breadcrumb__main">
+		<ng-container *ngFor="let breadcrumb of breadcrumbs; let isFirst = first;">
+			<span class="breadcrumb__link"
+				  [routerLink]="breadcrumb.url">
+				{{ breadcrumb.label }}
+			</span>
+			<img class="breadcrumb__img"
+				 *ngIf="isFirst"
+				 src="assets/images/icons/icon-chevron-right.svg"
+				 alt="icons">
+		</ng-container>
+	</div>
+	<div class="breadcrumb__nav">
+		<ng-content></ng-content>
+	</div>
 </div>
