feat: added ckeditor, moved breadcrumb

--- a/frontend/src/app/libs/common-components/components/button/button.component.html
+++ b/frontend/src/app/libs/common-components/components/button/button.component.html
@@ -12,7 +12,7 @@
 	<button
 			*ngSwitchCase="outlinedType"
 			mat-stroked-button
-			class="button button--outlined button--color-{{color}}"
+			class="button button--outlined button--color-outlined-{{color}}"
 			[class.button--dark-theme]="isDarkTheme"
 			[class.button--disable-hover]="disableHover"
 			[disabled]="disabled"
