--- a/frontend/src/app/libs/common-components/components/button/button.component.scss
+++ b/frontend/src/app/libs/common-components/components/button/button.component.scss
@@ -21,7 +21,7 @@
 
 	font-weight: 500;
 	font-size: 14px;
-	line-height: 17px;
+	line-height: 16px;
 	color: rgba(33, 33, 33, 0.75);
 	text-transform: uppercase;
 	letter-spacing: 1px;
@@ -97,5 +97,9 @@
 	&--color-mint {
 		background-color: $color-mint;
 		border-color: $color-mint;
+	}
+	&--color-outlined-primary {
+		border-color: $color-primary;
+		color: $color-primary;
 	}
 }
