--- a/frontend/src/app/libs/common-components/components/textarea/textarea.component.html
+++ b/frontend/src/app/libs/common-components/components/textarea/textarea.component.html
@@ -1,4 +1,4 @@
 <mat-form-field appearance="outline" [style.width] = "widthTextarea">
 	<mat-label>{{label}}</mat-label>
-	<textarea matInput></textarea>
+	<textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="4"></textarea>
   </mat-form-field>
