--- a/frontend/src/app/libs/event-creation/general-info-page/general-info-page.component.html
+++ b/frontend/src/app/libs/event-creation/general-info-page/general-info-page.component.html
@@ -2,26 +2,46 @@
 	<div class="app-general-info__header">
 		<span class="app-general-info__title">General Inforamation</span>
 	</div>
-	<app-input class="app-general-info__event-title"
-			   widthInput="872px"
-			   theme="lightTheme"
-			   type="text"
-			   label="Event title"></app-input>
-	<div>
-		<app-datepicker label="Start date"></app-datepicker>
-		<app-select label="Start time"></app-select>
-		<app-datepicker label="End date"></app-datepicker>
-		<app-select label="End time"></app-select>
-		<app-slide-toggle value="false"
-						  theme=lightTheme
-						  title="Continuous event">
-		</app-slide-toggle>
-		<span class="app-general-info__tool-tip"
-			 matTooltip="Info about the action">
-			<img src="assets/images/icons/icon-info.svg">
-	</span>
+	<div class="app-general-info__form">
+		<app-input widthInput="872px"
+				   theme="lightTheme"
+				   type="text"
+				   label="Event title"></app-input>
+		<div>
+			<app-datepicker class="app-general-info__date"
+							label="Start date"></app-datepicker>
+			<app-select class="app-general-info__time"
+						label="Start time"></app-select>
+			<img class="app-general-info__arrow"
+				 src="assets/images/icons/icon-arrow-forward.svg"
+				 alt="arrow-forward">
+			<app-datepicker class="app-general-info__date"
+							label="End date"></app-datepicker>
+			<app-select class="app-general-info__time"
+						label="End time"></app-select>
+			<app-slide-toggle value="false"
+							  theme=lightTheme
+							  title="Continuous event">
+			</app-slide-toggle>
+			<span matTooltip="Info about the action">
+				<img class="app-general-info__info"
+					 src="assets/images/icons/icon-info.svg">
+			</span>
+		</div>
+		<app-textarea label="Short summary (optional)"
+					  widthTextarea="872px"></app-textarea>
+		<div>
+			<app-slide-toggle value="false"
+							  theme=lightTheme
+							  title="Private event">
+			</app-slide-toggle>
+			<span matTooltip="Info about the action">
+				<img class="app-general-info__info"
+					 src="assets/images/icons/icon-info.svg">
+			</span>
+		</div>
+		<div class="app-general-info__ckeditor">
+			<app-ckeditor></app-ckeditor>
+		</div>
 	</div>
-	<app-textarea label="Short summary (optional)"
-				  widthTextarea="872px"></app-textarea>
-	<div>
-	</div>
+</div>
