feat: implement pass data from popover to general

--- a/frontend/src/app/libs/common-components/components/datepicker/datepicker.component.html
+++ b/frontend/src/app/libs/common-components/components/datepicker/datepicker.component.html
@@ -1,6 +1,6 @@
 <mat-form-field appearance="outline" class="app-datepicker__field">
 	<mat-label>{{label}}</mat-label>
-	<input matInput [matDatepicker]="picker">
+	<input matInput [matDatepicker]="picker" [formControl]="formControl">
 	<mat-datepicker-toggle matSuffix [for]="picker">
 		<mat-icon matDatepickerToggleIcon>calendar_today</mat-icon>
 	</mat-datepicker-toggle>
