--- a/frontend/src/app/libs/container/components/header/header.component.html
+++ b/frontend/src/app/libs/container/components/header/header.component.html
@@ -41,6 +41,7 @@
 			</div>
 			<div class="popover-content">
 				<app-input type="text"
+						   [(ngModel)]="eventTitle"
 						   widthInput="416px"
 						   [theme]="lightTheme"
 						   [label]="'LABEL.EVENT_NAME' | translate"
