--- a/frontend/src/app/libs/event-creation/general-info-page/general-info-page.component.html
+++ b/frontend/src/app/libs/event-creation/general-info-page/general-info-page.component.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class="app-general-info__form">
 		<form action=""
-			  [formGroup]="newEventInformationForm">
+			  [formGroup]="dataFromEventForm">
 			<app-input formControlName="title"
 					   [(ngModel)]="title"
 					   widthInput="872px"
