feat: formControl for ckeditor

--- a/frontend/src/app/libs/common-components/components/ckeditor/ckeditor.component.html
+++ b/frontend/src/app/libs/common-components/components/ckeditor/ckeditor.component.html
@@ -1,1 +1,3 @@
-<ckeditor [config]="config"></ckeditor>
+<ckeditor [config]="config"
+		  (change)="getDataCkeditor($event)"
+		  [formControl]="formControl"></ckeditor>
