feat: added effect for event

--- a/frontend/src/app/libs/container/components/header/header.component.html
+++ b/frontend/src/app/libs/container/components/header/header.component.html
@@ -29,8 +29,7 @@
 		<app-button class="header__button header__button--create-event"
 					*ngIf="userService.isEventManagerUser"
 					[theme]="darkTheme"
-					color="mint"
-					[type]="flatButtonType"
+					[type]="outlinedButtonType"
 					(click)="templatepopoverlight.open()">
 			{{"BUTTON.CREATE_EVENT" | translate}}
 		</app-button>
