--- a/frontend/src/app/libs/common-components/components/select/select.component.html
+++ b/frontend/src/app/libs/common-components/components/select/select.component.html
@@ -1,16 +1,9 @@
 <div class="app-select">
-	<mat-form-field appearance="outline"
-					class="app-select__field">
-		<mat-icon matSuffix
-				  [ngClass]="{ 'app-select__arrow--gray': !opened,
-				   'app-select__arrow--blue': opened }">
-			{{icon}}</mat-icon>
+	<mat-form-field appearance="outline" class="app-select__field">
+		<mat-icon matSuffix [ngClass]="{ 'app-select__arrow--gray': !opened, 'app-select__arrow--blue': opened }">{{icon}}</mat-icon>
 		<mat-label>{{label}}</mat-label>
-		<mat-select [formControl]="formControl"
-					disableOptionCentering
-					(openedChange)="openedChange($event)">
-			<mat-option *ngFor="let option of generateTime();"
-						[value]="option">{{option}}</mat-option>
+		<mat-select [formControl]="formControl" disableOptionCentering (openedChange)="openedChange($event)">
+		<mat-option *ngFor="let option of generateTime();" [value]="option">{{option}}</mat-option>
 		</mat-select>
 	</mat-form-field>
 </div>
