--- a/frontend/src/app/libs/common-components/components/slide-toggle/slide-toggle.component.html
+++ b/frontend/src/app/libs/common-components/components/slide-toggle/slide-toggle.component.html
@@ -1,8 +1,9 @@
-<mat-slide-toggle [checked]="value"
-				  (change)="toggle()"
-				  [formControl]="formControl"
-				  color="primary"
-				  [class.mat-slide-toggle-bar-dark]="isDarkTheme"
-				  [disabled]="disabled">
-	{{title}}
+<mat-slide-toggle
+				[checked]="value"
+				(change)="toggle()"
+				[formControl]="formControl"
+				color="primary"
+				[class.mat-slide-toggle-bar-dark]="isDarkTheme"
+				[disabled]="disabled">
+				{{title}}
 </mat-slide-toggle>
