--- a/frontend/src/app/libs/auth-pages/sign-up/sign-up.component.scss
+++ b/frontend/src/app/libs/auth-pages/sign-up/sign-up.component.scss
@@ -1,13 +1,13 @@
+@import "variables";
+
 .container {
     display: flex;
     align-items: center;
-    justify-content: center;
-    // flex-wrap: wrap;
-    height: 100%;
+    min-height: 100vh;
 }
 
-.container__form-signin {
-    width: 70%;
+.container__form-signup {
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -21,19 +21,24 @@
     align-items: center;
     justify-content: center;
 
-    width: 70%;
-    height: 100%;
+    width: calc(100% - 456px);
+    height: 100vh;
 }
 .container__logo {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 40%;
+    width: 51%;
+    max-width: 200px;
 }
 
-.input_medium {
-    width: 50%;
-    padding-right: 5px;
+.input_first-name {
+    width: calc(100% - 24px);
+    padding-right: 24px;
+}
+
+.input_last-name {
+    width: 100%;
 }
 
 .input_big {
@@ -41,14 +46,19 @@
 }
 
 .typography__white {
-    color: #ffffff;
-    padding-right: 15px;
+    color: rgba(255, 255, 255);
+}
+
+.or {
+    color: rgba(255, 255, 255, 0.5);
+    padding: 0 26px;
 }
 
 .container_signin {
-    width: 100%;
+    width: calc(100% - 72px);
     display: flex;
     justify-content: flex-end;
+    padding: 40px 72px 0 0;
 }
 
 .container__button {
@@ -56,4 +66,41 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.signup__background {
+    height: 100vh;
+}
+
+.signin__background-container {
+    height: 100vh;
+}
+
+.name-input-container {
+    width: 50%;
+}
+
+.name-inputs-container {
+    display: flex;
+    width: 100%;
+}
+
+.dividers-container {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 32px 0;
+}
+
+.divider {
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    //border-top-color: rgb(255, 255, 255);
+    width: calc(50% - 36px);
+    height: 10px;
+}
+
+.sign-in-question {
+    color: rgba(255, 255, 255);
+    padding-right: 12px;
+
 }
