feat: add mask input

--- a/frontend/src/app/libs/common-components/components/input/input.component.html
+++ b/frontend/src/app/libs/common-components/components/input/input.component.html
@@ -13,7 +13,7 @@
 		[type]="inputType"
 		(change)="onValueChange($event.target.value)"
 		(blur)="onTouched()"
-		placeholder={{placeholder}}>
+		placeholder={{placeholder}} prefix={{prefix}} mask={{mask}}>
 
 	<mat-error *ngFor="let error of errorsArray">
 		{{error}}
