--- a/frontend/src/app/libs/container/components/footer/footer.component.scss
+++ b/frontend/src/app/libs/container/components/footer/footer.component.scss
@@ -1,19 +1,19 @@
 @import "variables";
 
 .footer {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 100%;
-	height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: $footer-height;
 
-	background: #212121;
+  background: #212121;
 
-	&__text {
-		@include text-small;
-		
-		margin-bottom: 0;
+  &__text {
+    @include text-small;
 
-		color: $color-white;
-	}
+    margin-bottom: 0;
+
+    color: $color-white;
+  }
 }
