--- a/frontend/src/app/libs/event-creation/event-creation.component.scss
+++ b/frontend/src/app/libs/event-creation/event-creation.component.scss
@@ -1,19 +1,29 @@
 @import "variables";
 
 .event-creation {
-	background: #e5e5e5;
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh - #{$header-height} - #{$footer-height});
+  background: $color-alabaster;
 
-	&__bottom-bar {
-		position: sticky;
-		display:flex;
-		justify-content: space-between;
-		align-items: center;
-		bottom: 0;
-		background: $color-white-100;
-		border-top: 1px solid $color-black-10;
-		padding:$secondary-grid-unit * 3 $layout-outer-margin;
-	}
-	&__btn {
-		margin-right:$main-grid-unit * 2;
-	}
+  &__bottom-bar {
+    position: sticky;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    bottom: 0;
+    background: $color-white-100;
+    border-top: 1px solid $color-black-10;
+    padding: $secondary-grid-unit * 3 $layout-outer-margin;
+  }
+
+  &__btn {
+    margin-right: $main-grid-unit * 2;
+  }
+
+  &__tab-content {
+    display: flex;
+    flex-grow: 1;
+    padding: $layout-gutter $layout-outer-margin 0 $layout-outer-margin;
+  }
 }
