fix: click on event card do not navigate to specific event fix: fix

--- a/frontend/src/app/libs/landing/components/event-list/event-list.component.html
+++ b/frontend/src/app/libs/landing/components/event-list/event-list.component.html
@@ -17,7 +17,7 @@
 						[roles]="event.roles"
 						[size]="getSize(event)"
 						[draft]="event.draft"
-						(click)="navigateToEventsecription(event.id)">
+						(click)="navigateToEventPage(event.id)">
 		</app-event-card>
 	</div>
 </div>
