--- a/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.html
+++ b/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.html
@@ -10,16 +10,12 @@
 			<div class="app-event-description-panel__description"
 				 [innerHTML]="event.description | safeHtml">
 			</div>
-			<div class="app-event-description-panel__tool-tip"
-				 matTooltip="You must be logged in to participate in this round"
-				 [matTooltipDisabled]="userLoginStatus">
-				<app-button class="app-event-description-panel__take-part-button"
-							type="flat"
-							color="accept"
-							[disabled]="!userLoginStatus">
-					TAKE PART
-				</app-button>
-			</div>
+			<app-event-participation-control
+				[event]="event"
+				[user]="user.value"
+
+				(registered)="onTakePartInEvent($event)">
+			</app-event-participation-control>
 		</div>
 		<div class="app-event-description-panel__box-right">
 			<div class="app-event-description-panel__time-events">
@@ -92,15 +88,13 @@
 						</span>
 					</div>
 				</div>
-				<div class="app-event-description-panel__tool-tip-bottom"
-					 matTooltip="You must be logged in to participate in this round"
-					 [matTooltipDisabled]="userLoginStatus">
-					<app-button class="app-event-description-panel__take-part-button"
-								type="flat"
-								[disabled]="!userLoginStatus">
-						TAKE PART
-					</app-button>
-				</div>
+				<app-event-participation-control
+					[event]="event"
+					[user]="user.value"
+					[showHint]="false"
+
+					(registered)="onTakePartInEvent($event)">
+				</app-event-participation-control>
 			</div>
 		</div>
 	</div>
