--- a/frontend/src/app/libs/common-components/components/tasks-creator/tasks-creator/tasks-creator.component.scss
+++ b/frontend/src/app/libs/common-components/components/tasks-creator/tasks-creator/tasks-creator.component.scss
@@ -10,4 +10,12 @@
     justify-content: center;
     height: 100%;
   }
+
+  &__header {
+    padding: $main-grid-unit;
+  }
+
+  &__body {
+    padding: $events-creator-padding;
+  }
 }
