--- a/frontend/src/app/libs/common-components/shared/variables.scss
+++ b/frontend/src/app/libs/common-components/shared/variables.scss
@@ -11,6 +11,7 @@ $layout-sidebar-width: 36 * $main-grid-unit;
 $header-height: 80px;
 $breadcrumb-height: 48px;
 $footer-height: 40px;
+$events-creator-padding: $main-grid-unit * 5;
 // colors
 // primary
 $color-primary: #367ff6;
