feat: add tasks creator

--- a/frontend/src/app/libs/common-components/components/slide-toggle/slide-toggle.component.html
+++ b/frontend/src/app/libs/common-components/components/slide-toggle/slide-toggle.component.html
@@ -3,6 +3,7 @@
 				(change)="toggle()"
 				[formControl]="formControl"
 				color="primary"
+        [labelPosition]="labelPosition"
 				[class.mat-slide-toggle-bar-dark]="isDarkTheme"
 				[disabled]="disabled">
 				{{title}}
