--- a/frontend/src/app/libs/common-components/components/tasks-creator/tasks-creator/tasks-creator.component.scss
+++ b/frontend/src/app/libs/common-components/components/tasks-creator/tasks-creator/tasks-creator.component.scss
@@ -18,4 +18,12 @@
   &__body {
     padding: $events-creator-padding;
   }
+
+  &__basic-settings {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__max-score {
+  }
 }
